<resources>
    <string name="app_name">Final-H071191035</string>

    <!--  added manually  -->
    <string name="airing_today">Airing Today</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rating</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="favorite_empty">Favorite list is empty</string>
</resources>